tests/bad/struct/multiple-struct.go
package main

type Toto struct {
	x int
}

type Toto struct {
	x int
}
